# msglm

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  pyproject.toml  search.json  settings.ini  sitemap.xml
.github/actions/: action.yml
msglm/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb
